2005-11-04  Roger While <simrw@sim-basis.de>

	* cobc.c : Take out option -no-gcse
	* codegen.c : Don't use arrays for local stack variables
	  Put in experimental (deactivated) setjmp/longjmp code
	  for performs.

2005-11-01  Roger While <simrw@sim-basis.de>

	* codegen.c : Take out attribute aligned. It borks 
	  under Cygwin latest.

2005-10-31  Roger While <simrw@sim-basis.de>

	* cobc.c : Cater for -Wno-pointer-check correctly

2005-10-26  Roger While <simrw@sim-basis.de>

	* typeck.c : Remove HAVE_DB ifdef

2005-10-25  Roger While <simrw@sim-basis.de>

	* cobc.c, typeck.c : Add in optimizations (memset/memcpy)

2005-10-14  Roger While <simrw@sim-basis.de>

	* All : More GCC 4 fixes
	* typeck.c : Take out last references to cb_runtime_inlining
	* flag.def : Mark -fruntime_inlining as deprecated in help text

2005-10-13  Roger While <simrw@sim-basis.de>

	* cobc.c : For GCC >= 4, add -Wnopointer-sign

2005-10-06  Roger While <simrw@sim-basis.de>

	* pplex.l : Ignore DATE-MODIFIED

2005-10-06  Roger While <simrw@sim-basis.de>

	* Indent again - typeck.c
	  indents too far - need to look at cb_build_identifier

2005-10-01  Roger While <simrw@sim-basis.de>

	* Indent run on most source
	* Start optimizing in typeck/codegen -
		Unsigned numeric (Pic 9) field optimize
		Retrieval of binary-swap 2,4,8 byte fields
		Retrieval of 1 byte binary fields always optimized
		Optimize referencing linkage section items
		Test/set of 1 byte fields
	* cobc.c : Print patch level for -V (eg. 0.33.0)

2005-08-07  Roger While <simrw@sim-basis.de>

	* codegen.c : Prototypes, unneeded fields
	* parser.y : unneeded fields
	* config.c : indent

2005-08-04  Roger While <simrw@sim-basis.de>

	* codegen.c : Change initialization point of cob_screen_init
	  Change generated exit to cob_stop_run
	* typeck.c : Typo

2005-07-31  Roger While <simrw@sim-basis.de>

	* parser.y : Fix a DISPLAY usage clash
	* typeck.c : Bump the ref count for the field referred to by an 88