@@ -33,6 +33,7 @@ CB_CONFIG_BOOLEAN (cb_complex_odo, "complex-odo")
 CB_CONFIG_BOOLEAN (cb_indirect_redefines, "indirect-redefines")
 CB_CONFIG_BOOLEAN (cb_larger_redefines_ok, "larger-redefines-ok")
 CB_CONFIG_BOOLEAN (cb_relaxed_syntax_check, "relaxed-syntax-check")
+CB_CONFIG_BOOLEAN (cb_perform_osvs, "perform-osvs")
 CB_CONFIG_SUPPORT (cb_author_paragraph, "author-paragraph")
 CB_CONFIG_SUPPORT (cb_memory_size_clause, "memory-size-clause")
 CB_CONFIG_SUPPORT (cb_multiple_file_tape_clause, "multiple-file-tape-clause")
