@@ -85,6 +85,9 @@ larger-redefines-ok: no
 # Value: `yes', `no'
 relaxed-syntax-check: no
 
+# Value: `yes', `no'
+perform-osvs: no
+
 # not-reserved:
 # Value: Word to be taken out of the reserved words list
 # (case independent)
